[package]
name = "hello_docker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.14"
tokio = { version = "1.26.0", features = ["full"] }
rust-ipfs = { git = "https://github.com/Ali-Usama/rust-ipfs", branch = "libp2p-next" }


[features]
node-test = []
fast-runtime = []